// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request should execute a request 1`] = `
Object {
  "body": "{\\"hello\\": \\"world\\"}",
  "request": Object {
    "body": Object {
      "username": "seich",
    },
    "endpoint": "http://example.com/user",
    "headers": Object {
      "authentication": "BEARER abc123",
    },
  },
  "response": Object {
    "body": "{\\"hello\\": \\"world\\"}",
    "headers": Array [],
    "status": 200,
  },
}
`;

exports[`Request should execute a request 2`] = `
Object {
  "body": "{\\"hello\\": \\"world\\"}",
  "request": Object {
    "body": undefined,
    "endpoint": "http://example.com/user",
    "headers": undefined,
  },
  "response": Object {
    "body": "{\\"hello\\": \\"world\\"}",
    "headers": Array [],
    "status": 200,
  },
}
`;
